<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtt_ros2_idl</name>
  <version>0.0.0</version>
  <description>
    This package provides a CMake function, templates and a TypeInfoGenerator implementation
    that leverages ROS 2 C++ introspection type support in order to generate and build
    Orocos RTT typekit plugins for existing ROS 2 interface (messages, services, actions) packages.
  </description>
  <maintainer email="orocos-dev@orocos.org">Orocos Developers</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rtt_ros2</depend>
  <build_export_depend>rosidl_cmake</build_export_depend>
  <build_export_depend>rosidl_generator_cpp</build_export_depend>
  <build_export_depend>rosidl_typesupport_introspection_cpp</build_export_depend>

  <exec_depend>rtt_ros2_primitives_typekit</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
