<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtt_ros2_rclcpp_typekit</name>
  <version>0.0.0</version>
  <description>
    Orocos RTT typekit plugin for rclcpp types
  </description>
  <maintainer email="orocos-dev@orocos.org">Orocos Developers</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rtt_ros2</depend>
  <exec_depend>rtt_ros2_builtin_interfaces_typekit</exec_depend>
  <exec_depend>rtt_ros2_primitives_typekit</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
