<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtt_ros2_tf2</name>
  <version>0.0.0</version>
  <description>
    This package provides an interface to use TF2 in Orocos context.
  </description>
  <maintainer email="orocos-dev@orocos.org">Orocos Developers</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rtt</depend>

  <build_depend>rclcpp</build_depend>  <!-- for generated version check macros -->
  <build_depend>tf2</build_depend>
  <build_depend>rtt_ros2</build_depend>
  <build_depend>rtt_ros2_geometry_msgs</build_depend>
  <!-- <build_depend>rtt_tf2_msgs</build_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

