<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtt_ros2_@(package)</name>
  <version>0.0.0</version>
  <description>@(description or f"RTT typekit {'and transport plugins ' if transports else ''}for {package}")</description>
  <maintainer email="@(maintainer_email or "orocos-dev@orocos.org")">@(maintainer_name or "Orocos Developers")</maintainer>
  <license>@(license or "Apache License 2.0")</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>@(package)</depend>
@[if transports]@
  <depend>rtt_ros2_interfaces</depend>  <!-- typekit and transports -->
@[else]@
  <depend>rtt_ros2_idl</depend>  <!-- pure typekit -->
@[end if]@

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
